@@ -1,12 +1,0 @@
-{
-	"settings" : {
-		"Name" : "African Plains TG",
-		"Script" : "african_plains_tg.js",
-		"Description" : "The central region of the vast continent of Africa, birthplace of humanity. Players start in a lush area teeming with vegetation and wildlife; teammates are placed more closely together.",
-		"SupportedBiomes": ["generic/savanna", "generic/sahara", "generic/nubia"],
-		"Preview" : "african_plains.png",
-		"Keywords": ["multiplayer", "community"],
-		"CircularMap" : true,
-		"TeamPlacements": ["line", "stronghold", "besideAllies", "randomGroup"]
-	}
-}
