@@ -1,3 +1,7 @@
+2022-06-09
+
+    * remove random/African Plains TG
+
 2022-04-10
 
     * release v0.25.15
